--- a/src/app/login/style/login.scss
+++ b/src/app/login/style/login.scss
@@ -1,6 +1,9 @@
 .login {
-  height: 100%;
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+
   &__wrapper {
     margin: 0 auto;
     border: 1px solid gray;
