added user list table to application

--- a/src/app/menu-drawer/menu-drawer.scss
+++ b/src/app/menu-drawer/menu-drawer.scss
@@ -1,28 +1,35 @@
 .drawer {
   position: relative;
+  background: white;
+
   &__button {
+    margin: 10px;
     padding: 10px 20px;
-    background: aqua;
     border-radius: 15px;
 
     &--logout {
-      background: red;
       padding: 15px 40px;
       border-radius: 15px;
       text-align: center;
-      color: white;
+      font-size: 25px;
+      background: gainsboro;
 
       &:hover {
         cursor: pointer;
         background: #6b6b3f;
         transition-duration: .4s;
       }
-
     }
+  }
 
-    &--show-menu {
+  &__menu__items {
 
+    &--text {
+      font-size: 20px;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
-
   }
 }
