--- a/src/app/administrator/users-view/users.scss
+++ b/src/app/administrator/users-view/users.scss
@@ -1,14 +1,8 @@
 .users {
-  padding: 0 5%;
-  background: white;
 
-  &__wrapper {
-    margin: 20px 0;
-
-    &__text {
-      margin: 0;
-      text-align: center;
-      font-size: 30px;
+  &__buttons {
+    button {
+      margin-right: 10px;
     }
   }
 
