--- a/src/app/libs/components/table/table-component.scss
+++ b/src/app/libs/components/table/table-component.scss
@@ -5,4 +5,10 @@
     padding: 5px 10px;
     margin-bottom: 20px;
   }
+
+  &__action-buttons {
+    button {
+      margin-right: 10px;
+    }
+  }
 }
