--- a/src/app/funera-house-worker/prepare-funeral-view/prepare-funeral-success/prepare-funeral-success.scss
+++ b/src/app/funera-house-worker/prepare-funeral-view/prepare-funeral-success/prepare-funeral-success.scss
@@ -6,6 +6,7 @@
   }
   &__button-wrapper {
     display: flex;
+    flex-direction: column;
     gap: 10px;
     justify-content: center;
     padding: 20px;
