added styles to project

--- a/src/app/funera-house-worker/prepare-funeral-view/prepare-funeral-success/prepare-funeral-success.scss
+++ b/src/app/funera-house-worker/prepare-funeral-view/prepare-funeral-success/prepare-funeral-success.scss
@@ -1,4 +1,8 @@
 .prepare-funeral-success-container {
+
+  max-width: 600px;
+  margin: 0 auto;
+
   h2 {
     font-size: 16px;
     text-align: center;
