--- a/src/app/funera-house-worker/funeral-view/details/funeral-details.scss
+++ b/src/app/funera-house-worker/funeral-view/details/funeral-details.scss
@@ -1,14 +1,24 @@
 .funeral-details-container {
   text-align: center;
-  &__wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background: rgba(164, 164, 164, .3);
+  width: 500px;
+  padding: 50px;
+  margin: 0 auto;
+  border-radius: 20px;
 
+  &__wrapper {
     &__info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+
       p {
         font-size: 18px;
+        margin: 0;
       }
+
       span {
         font-weight: bolder;
       }
