--- a/src/app/funera-house-worker/prepare-funeral-view/prepare-funeral-view.scss
+++ b/src/app/funera-house-worker/prepare-funeral-view/prepare-funeral-view.scss
@@ -1,9 +1,12 @@
 .prepare-funeral-view-container {
-  min-width: 500px;
   margin: 0 auto;
+  max-width: 900px;
+  padding: 20px 0;
+  border-radius: 20px;
+  background: rgba(164, 164, 164, .3);
 
-  h2 {
+h2 {
     text-align: center;
-    font-size: 18px;
+    font-size: 24px;
   }
 }
